--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -1,3 +1,12 @@
 body {
     padding-top: 70px;
 }
+
+.vote-pannel-heading {
+    padding: 5px 15px;
+}
+
+.vote-media-heading {
+    margin: 0px;
+    font-weight: bold;
+}
