--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -2,6 +2,11 @@ body {
     padding-top: 70px;
 }
 
+.inner-col {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 .vote-pannel-heading {
     padding: 5px 15px;
 }
@@ -9,4 +14,10 @@ body {
 .vote-media-heading {
     margin: 0px;
     font-weight: bold;
+}
+
+.vote-actions {
+    text-align: right;
+    overflow: hidden;
+    margin: 5px 0px;
 }
