--- a/src/main/webapp/static/css/voter.css
+++ b/src/main/webapp/static/css/voter.css
@@ -19,6 +19,13 @@ body {
     padding: 0px 15px;
 }
 
+.vote-panel-footer {
+    padding: 0px 15px 5px;
+    text-align: center;
+    background-color: #fff;
+    border-top: 0px;
+}
+
 .vote-media-heading {
     margin: 0px;
     font-weight: bold;
