--- a/src/main/webapp/static/css/voter.css
+++ b/src/main/webapp/static/css/voter.css
@@ -184,6 +184,19 @@ body {
     margin-top: 15px;
 }
 
+.vote-self-info {
+    padding: 5px 15px;
+}
+
+.vote-self-info ul {
+    margin-bottom: 0px;
+}
+
+.vote-self-info .list-group-item {
+    padding: 5px 0px;
+    border: none;
+}
+
 .vote-self-table {
     margin-bottom: 0px;
 }
@@ -194,8 +207,8 @@ body {
 }
 
 .front-footer {
-    background-color: rgba(255,255,255,0);
-    border-color: rgba(255,255,255,0);
+    background-color: rgba(255, 255, 255, 0);
+    border-color: rgba(255, 255, 255, 0);
     color: white;
     font-size: 11px;
     text-align: center;
