--- a/src/main/webapp/static/css/voter.css
+++ b/src/main/webapp/static/css/voter.css
@@ -214,12 +214,11 @@ body {
     text-align: center;
 }
 
-.not-found-main{
+.error-page-main{
     margin-top: 100px;
     text-align: center;
-    min-width: 600px;
 }
-.not-found-from{
+.error-page-from{
     margin:20px auto;
     width: 600px;
 }
