--- a/src/main/webapp/WEB-INF/include/head.jspf
+++ b/src/main/webapp/WEB-INF/include/head.jspf
@@ -1,4 +1,5 @@
 <%@page pageEncoding="utf-8" %>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@ taglib prefix='fmt' uri="http://java.sun.com/jsp/jstl/fmt" %>
 <c:set var="ctxStatic" value="${pageContext.request.contextPath}/static"/>
 <c:set var="ctx" value="${pageContext.request.contextPath}"/>
