1.增加voter表 2.Home初始加载vote

--- a/src/main/webapp/static/css/voter.css
+++ b/src/main/webapp/static/css/voter.css
@@ -222,3 +222,10 @@ body {
     margin:20px auto;
     width: 600px;
 }
+.vote-modal{
+    top: 200px;
+}
+
+.vote-modal .modal-title{
+    text-align: center;
+}
