--- a/src/main/webapp/static/css/voter.css
+++ b/src/main/webapp/static/css/voter.css
@@ -249,3 +249,29 @@ body {
 .vote-modal .list-group{
     margin-bottom: 0px;
 }
+.alert-messages{
+    position: fixed;
+    top: 46px;
+    left: 0;
+    right: 0;
+    z-index: 999;
+}
+.message{
+    position: relative;
+    width: 600px;
+    padding: 20px;
+    margin: 0 auto;
+    background: #fff;
+    background-color: rgba(255,255,255,0.97);
+    border-radius: 0 0 6px 6px;
+    box-shadow: 0 2px 4px rgba(0,0,0,.25);
+}
+.message .message-text{
+    display: block;
+    margin-right: 20px;
+    color: #66757f;
+    color: rgba(102,117,127,0.6);
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+}
