--- a/src/main/webapp/static/css/voter.css
+++ b/src/main/webapp/static/css/voter.css
@@ -235,6 +235,7 @@ body {
 .vote-modal .list-group-item {
     padding: 0px;
     border: none;
+    border-bottom: 1px solid #FFF;
 }
 
 .vote-modal .modal-header, .vote-modal .modal-footer {
