--- a/src/main/webapp/WEB-INF/include/head.jspf
+++ b/src/main/webapp/WEB-INF/include/head.jspf
@@ -1,6 +1,7 @@
 <%@page pageEncoding="utf-8" %>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ taglib prefix='fmt' uri="http://java.sun.com/jsp/jstl/fmt" %>
+<%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
 <c:set var="ctxStatic" value="${pageContext.request.contextPath}/static"/>
 <c:set var="ctx" value="${pageContext.request.contextPath}"/>
 <script type="text/javascript">
